# sovran-typemap

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml  release.sh
.github/workflows/: rust-ci.yml
examples/: animal.rs  app_state.rs  numbers.rs  service_locator.rs
src/: any_value.rs  error.rs  lib.rs  map.rs  store.rs  store_value.rs  trait_tests.rs  traits.rs  typed.rs
tests/: integration_tests.rs  typemap_tests.rs  typemapv_tests.rs
tools/: release.rs
